Bug 507542 - Minimap shows long words with squiggles blank when scrolled into view
Summary: Minimap shows long words with squiggles blank when scrolled into view
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-27 15:07 UTC by Tech-Tac
Modified: 2025-08-30 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tech-Tac 2025-07-27 15:07:08 UTC
SUMMARY
The minimap on the right that acts as the vertical scrollbar hides most words that would have a squiggle underneath in the editor view

STEPS TO REPRODUCE
1. Enable spell checking
2. Include misspelled words in a file
3. Scroll it in and out the view

OBSERVED RESULT
The word disappears from the minimap when scrolled into view and goes back to being rendered when out.

EXPECTED RESULT
Should always render the same on minimap regardless of scroll position and squiggle presence

SOFTWARE/OS VERSIONS
Linux: Arch
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Comment 1 Christoph Cullmann 2025-08-30 17:17:53 UTC
Git commit c173388580091fb5d89e4f17a879c6fd06341259 by Christoph Cullmann.
Committed on 30/08/2025 at 17:17.
Pushed by cullmann into branch 'master'.

ensure we only handle decorations that set foreground color

otherwise spelling underlines will remove text from the mini map

M  +3    -2    src/view/kateviewhelpers.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/c173388580091fb5d89e4f17a879c6fd06341259
Comment 2 Christoph Cullmann 2025-08-30 17:18:12 UTC
Thanks for the report!