ensure we only handle decorations that set foreground color

otherwise spelling underlines will remove text from the mini map

BUG: 507542